--- a/Source/TimeWarp.Console.Template/content/TimeWarp.Console-CSharp/Tests/Console-CSharp.Tests/Console-CSharp.Tests.csproj
+++ b/Source/TimeWarp.Console.Template/content/TimeWarp.Console-CSharp/Tests/Console-CSharp.Tests/Console-CSharp.Tests.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Console_CSharp.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fixie" Version="2.0.4" />
-    <PackageReference Include="Shouldly" Version="3.0.2" />
-    <DotNetCliToolReference Include="Fixie.Console" Version="2.0.1" />
+    <PackageReference Include="Fixie" Version="2.2.2" />
+    <PackageReference Include="Shouldly" Version="4.0.3" />
+    <DotNetCliToolReference Include="Fixie.Console" Version="2.2.2" />
   </ItemGroup>
 
   <ItemGroup>
