--- a/Source/TimeWarp.Blazor.Template/Directory.Build.props
+++ b/Source/TimeWarp.Blazor.Template/Directory.Build.props
@@ -2,8 +2,8 @@
   <PropertyGroup>
     <Authors>Steven T. Cramer</Authors>
     <Product>TimeWarp.Blazor</Product>
-    <PackageIconUrl>https://raw.githubusercontent.com/TimeWarpEngineering/blazor-state/master/Assets/Logo.png</PackageIconUrl>
-    <PackageProjectUrl>https://timewarpengineering.github.io/blazor-state/</PackageProjectUrl>
+    <PackageIconUrl>https://github.com/TimeWarpEngineering/timewarp-templates/raw/master/Assets/Logo.png</PackageIconUrl>
+    <PackageProjectUrl>https://timewarpengineering.github.io/timewarp-templates/TimeWarpBlazorTemplate/Overview.html</PackageProjectUrl>
     <PackageTags>Microsoft ASP.NET Core Blazor State Blazor-State MediatR Mediator Pipeline Redux</PackageTags>
     <PackageReleaseNotes>TODO</PackageReleaseNotes>
     <RepositoryUrl>https://github.com/TimeWarpEngineering/timewarp-templates.git</RepositoryUrl>
