--- a/Source/TimeWarp.Blazor.Template/TimeWarp.AspNetCore.Blazor.Templates.csproj
+++ b/Source/TimeWarp.Blazor.Template/TimeWarp.AspNetCore.Blazor.Templates.csproj
@@ -10,7 +10,7 @@
     <PackageTags>dotnet-new;templates;aspnet;blazor;spa;pwa;timewarp</PackageTags>
     <PackageIcon>logo.png</PackageIcon>
 
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 
     <IncludeContentInPack>true</IncludeContentInPack>
     <IncludeBuildOutput>false</IncludeBuildOutput>
