--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/TypeScript/package.json
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/TypeScript/package.json
@@ -6,21 +6,21 @@
     "build": "tsc",
     "lint": "eslint source --ext .ts",
     "prettier": "prettier --write .",
-    "tailwinds": "tailwindcss build ./css/input.css -o ../Client/wwwroot/css/site.css",
+    "tailwinds": "tailwindcss build -i ./css/input.css -o ../Client/wwwroot/css/site.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "4.28.2",
-    "@typescript-eslint/parser": "4.28.2",
-    "autoprefixer": "10.2.6",
-    "eslint": "7.30.0",
+    "@typescript-eslint/eslint-plugin": "4.29.0",
+    "@typescript-eslint/parser": "4.29.0",
+    "autoprefixer": "10.3.1",
+    "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-prettier": "3.4.0",
-    "postcss": "8.3.5",
+    "postcss": "8.3.6",
     "prettier": "2.3.2",
-    "tailwindcss": "2.2.4",
+    "tailwindcss": "2.2.7",
     "typescript": "4.3.5"
   }
 }
