rename API project back to Shared
Stay consistent with the default and actually it is more accurate as I can put other things besides API in it.

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TimeWarp.Blazor.Client.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TimeWarp.Blazor.Client.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Api\TimeWarp.Blazor.Api.csproj" />
+    <ProjectReference Include="..\Api\TimeWarp.Blazor.Shared.csproj" />
     <ProjectReference Include="..\TypeScript\TimeWarp.Blazor.TypeScript.csproj" />
   </ItemGroup>
 
