Add references to support gRPC
Configure gRPC and implement IHelloService
Update nuget packages to latest versions and fix any breaking changes

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Api/TimeWarp.Blazor.Shared.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Api/TimeWarp.Blazor.Shared.csproj
@@ -11,5 +11,6 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="$(FluentValidationVersion)" />
     <PackageReference Include="MediatR" Version="$(MediatrVersion)" />
+    <PackageReference Include="protobuf-net.Grpc" Version="$(protobufnetGrpcAspNetCoreVersion)" />
   </ItemGroup>
 </Project>
