--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/EndToEnd.Playwright.Tests/EndToEnd.Playwright.Tests.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/EndToEnd.Playwright.Tests/EndToEnd.Playwright.Tests.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Playwright" Version="1.12.2" />
+    <PackageReference Include="Microsoft.Playwright" Version="$(MicrosoftPlaywrightVersion)" />
   </ItemGroup>
 
 </Project>
