Adding System.ServiceModel.Primitives for some reason fixes the bug
It was impilicity added already via shared but explicitly adding fixes it
Added Grpc Reflection and it is working using `dotnet tool install -g dotnet-grpc-cli`
Delete the standalone GRPC server.  Not needed.  If we need it for scalability one can extract it then.

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Shared/TimeWarp.Blazor.Shared.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Shared/TimeWarp.Blazor.Shared.csproj
@@ -12,5 +12,6 @@
     <PackageReference Include="FluentValidation" Version="$(FluentValidationVersion)" />
     <PackageReference Include="MediatR" Version="$(MediatrVersion)" />
     <PackageReference Include="protobuf-net.Grpc" Version="$(protobufnetGrpcAspNetCoreVersion)" />
+    <PackageReference Include="System.ServiceModel.Primitives" Version="$(SystemServiceModelPrimitivesVersion)" />
   </ItemGroup>
 </Project>
