--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/appsettings.json
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "SampleOptions": {
-    "SampleOption":  "SampleValue"
-  }
+    "SampleOption": "SampleValue"
+  },
+  "BackendUrl": "https://localhost:5001"
 }
