--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Directory.Build.props
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Directory.Build.props
@@ -8,65 +8,13 @@
 
   <!-- Common compile parameters -->
   <PropertyGroup>
-    <Nullable>disable</Nullable>
     <LangVersion>preview</LangVersion>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+    <Nullable>disable</Nullable>
+    <TargetFramework>net5.0</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <!-- We use full (Windows PDBs) until cross platform support for source link will get better -->
     <DebugType>full</DebugType>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
-
-  <!--Versions of packages used across the solution-->
-  <PropertyGroup Label="Package Versions">
-    <MicrosoftAspNetCoreBlazorHttpClientVersion>5.0.7</MicrosoftAspNetCoreBlazorHttpClientVersion>
-    <MicrosoftAspNetCoreComponentsWebAssemblyDevServerVersion>5.0.10</MicrosoftAspNetCoreComponentsWebAssemblyDevServerVersion>
-    <MicrosoftAspNetCoreComponentsWebAssemblyServerVersion>5.0.10</MicrosoftAspNetCoreComponentsWebAssemblyServerVersion>
-    <MicrosoftAspNetCoreComponentsWebAssemblyVersion>5.0.10</MicrosoftAspNetCoreComponentsWebAssemblyVersion>
-    <MicrosoftAspNetCoreMvcTestingVersion>5.0.10</MicrosoftAspNetCoreMvcTestingVersion>
-    <MicrosoftAspNetCoreSignalRClientVersion>5.0.10</MicrosoftAspNetCoreSignalRClientVersion>
-    <MicrosoftExtensionsDiagnosticsHealthChecksEntityFrameworkCoreVersion>5.0.10</MicrosoftExtensionsDiagnosticsHealthChecksEntityFrameworkCoreVersion>
-    <MicrosoftCodeAnalysisVersion>3.11.0</MicrosoftCodeAnalysisVersion>
-    <MicrosoftEntityFrameworkCoreCosmosVersion>5.0.10</MicrosoftEntityFrameworkCoreCosmosVersion>
-    <MicrosoftEntityFrameworkCoreSqlServerVersion>5.0.10</MicrosoftEntityFrameworkCoreSqlServerVersion>
-    <MicrosoftPlaywrightVersion>1.14.1</MicrosoftPlaywrightVersion>
-    <SystemConfigurationConfigurationManagerVersion>5.0.0</SystemConfigurationConfigurationManagerVersion>
-    <SystemNetHttpJsonVersion>5.0.0</SystemNetHttpJsonVersion>
-    <SystemServiceModelPrimitivesVersion>4.8.1</SystemServiceModelPrimitivesVersion>
-    <SystemTextJsonVersion>5.0.2</SystemTextJsonVersion>
-
-    <AutoMapperExtensionsMicrosoftDependencyInjectionVersion>8.1.1</AutoMapperExtensionsMicrosoftDependencyInjectionVersion>
-    <AutoMapperVersion>10.1.1</AutoMapperVersion>
-    <BlazorComponentUtilitiesVersion>1.7.1</BlazorComponentUtilitiesVersion>
-    <BlazorExtensionsLoggingVersion>0.4.0</BlazorExtensionsLoggingVersion>
-    <BlazorStateVersion>4.0.0</BlazorStateVersion>
-    <DawnGuardVersion>1.12.0</DawnGuardVersion>
-    <FixieConsoleVersion>2.2.1</FixieConsoleVersion>
-    <FixieVersion>2.2.2</FixieVersion>
-    <FluentAssertionsVersion>5.10.3</FluentAssertionsVersion>
-    <FluentValidationAspNetCoreVersion>10.3.3</FluentValidationAspNetCoreVersion>
-    <FluentValidationVersion>10.3.3</FluentValidationVersion>
-    <GrpcNetClientVersion>2.39.0</GrpcNetClientVersion>
-    <GrpcNetClientWebVersion>2.39.0</GrpcNetClientWebVersion>
-    <GrpcAspNetCoreWebVersion>2.39.0</GrpcAspNetCoreWebVersion>
-    <MediatrExtensionsMicrosoftDependencyInjectionVersion>9.0.0</MediatrExtensionsMicrosoftDependencyInjectionVersion>
-    <MediatrVersion>9.0.0</MediatrVersion>
-    <MicroElementsSwashbuckleFluentValidationVersion>5.3.0</MicroElementsSwashbuckleFluentValidationVersion>
-    <OaktonVersion>3.2.2</OaktonVersion>
-    <protobufnetGrpcAspNetCoreVersion>1.0.152</protobufnetGrpcAspNetCoreVersion>
-    <protobufnetGrpcReflectionVersion>1.0.152</protobufnetGrpcReflectionVersion>
-    <protobufnetGrpcAspNetCoreReflectionVersion>1.0.152</protobufnetGrpcAspNetCoreReflectionVersion>
-    <PeterLeslieMorrisBlazorFluentValidationVersion>1.7.0</PeterLeslieMorrisBlazorFluentValidationVersion>
-    <SeleniumSupportVersion>3.141.0</SeleniumSupportVersion>
-    <SeleniumWebDriverVersion>3.141.0</SeleniumWebDriverVersion>
-    <ShouldlyVersion>4.0.3</ShouldlyVersion>
-    <SwashbuckleAspNetCoreAnnotationsVersion>6.2.1</SwashbuckleAspNetCoreAnnotationsVersion>
-    <SwashbuckleAspNetCoreFiltersVersion>7.0.2</SwashbuckleAspNetCoreFiltersVersion>
-    <SwashbuckleAspNetCoreSwaggerGenVersion>6.2.1</SwashbuckleAspNetCoreSwaggerGenVersion>
-    <SwashbuckleAspNetCoreSwaggerUIVersion>6.2.1</SwashbuckleAspNetCoreSwaggerUIVersion>
-    <SwashbuckleAspNetCoreSwaggerVersion>6.2.1</SwashbuckleAspNetCoreSwaggerVersion>
   </PropertyGroup>
 </Project>
