--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/EndToEnd.Playwright.Tests/EndToEnd.Playwright.Tests.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/EndToEnd.Playwright.Tests/EndToEnd.Playwright.Tests.csproj
@@ -2,11 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Playwright" Version="$(MicrosoftPlaywrightVersion)" />
+    <PackageReference Include="Microsoft.Playwright" />
   </ItemGroup>
 
 </Project>
