--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/Client.Integration.Tests/TimeWarp.Blazor.Client.Integration.Tests.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/Client.Integration.Tests/TimeWarp.Blazor.Client.Integration.Tests.csproj
@@ -8,5 +8,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Source\Client\TimeWarp.Blazor.Client.csproj" />
     <ProjectReference Include="..\..\Source\Server\TimeWarp.Blazor.Server.csproj" />
+    <ProjectReference Include="..\TimeWarp.Blazor.Testing\TimeWarp.Blazor.Testing.csproj" />
   </ItemGroup>
 </Project>
