--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/Server.Integration.Tests/TimeWarp.Blazor.Server.Integration.Tests.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/Server.Integration.Tests/TimeWarp.Blazor.Server.Integration.Tests.csproj
@@ -2,13 +2,11 @@
   <ItemGroup>
     <PackageReference Include="Fixie.TestAdapter" />
     <PackageReference Include="FluentAssertions" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
-    <PackageReference Include="Shouldly" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Source\Server\TimeWarp.Blazor.Server.csproj" />
     <ProjectReference Include="..\..\Source\Shared\TimeWarp.Blazor.Shared.csproj" />
+    <ProjectReference Include="..\TimeWarp.Blazor.Testing\TimeWarp.Blazor.Testing.csproj" />
   </ItemGroup>
 </Project>
