--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Directory.Packages.props
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Directory.Packages.props
@@ -5,8 +5,9 @@
     <PackageVersion Include="BlazorComponentUtilities" Version="1.7.1" />
     <PackageVersion Include="Blazor-State" Version="4.0.0" />
     <PackageVersion Include="Dawn.Guard" Version="1.12.0" />
+    <PackageVersion Include="Fixie" Version="3.2.0" />
     <PackageVersion Include="Fixie.TestAdapter" Version="3.2.0" />
-    <PackageVersion Include="FluentAssertions" Version="5.10.3" />
+    <PackageVersion Include="FluentAssertions" Version="6.1.0" />
     <PackageVersion Include="FluentValidation" Version="10.3.3" />
     <PackageVersion Include="FluentValidation.AspNetCore" Version="10.3.3" />
     <PackageVersion Include="Grpc.AspNetCore.Web" Version="2.39.0" />
@@ -19,7 +20,7 @@
     <PackageVersion Include="protobuf-net.Grpc.AspNetCore.Reflection" Version="1.0.152" />
     <PackageVersion Include="protobuf-net.Grpc.Reflection" Version="1.0.152" />
     <PackageVersion Include="System.ServiceModel.Primitives" Version="4.8.1" />
-    <PackageVersion Include="MicroElements.Swashbuckle.FluentValidation" Version="5.3.0" />
+    <PackageVersion Include="MicroElements.Swashbuckle.FluentValidation" Version="5.4.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.10" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.10" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.10" />
@@ -29,14 +30,14 @@
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Cosmos" Version="5.0.10" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
     <PackageVersion Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="5.0.10" />
-    <PackageVersion Include="Microsoft.Playwright" Version="1.14.1" />
+    <PackageVersion Include="Microsoft.Playwright" Version="1.15.2" />
     <PackageVersion Include="Oakton" Version="3.2.2" />
     <PackageVersion Include="PeterLeslieMorris.Blazor.FluentValidation" Version="1.7.0" />
-    <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.1" />
+    <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.2" />
     <PackageVersion Include="Swashbuckle.AspNetCore.Filters" Version="7.0.2" />
-    <PackageVersion Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.1" />
-    <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.1" />
-    <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.1" />
+    <PackageVersion Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.2" />
+    <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.2" />
+    <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.2" />
     <PackageVersion Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
     <PackageVersion Include="System.Net.Http.Json" Version="5.0.0" />
 
@@ -45,13 +46,3 @@
     <PackageVersion Include="Shouldly" Version="4.0.3" />
   </ItemGroup>
 </Project>
-
-
-  <!--Versions of packages used across the solution-->
-  <!-- <PropertyGroup Label="Package Versions">
-    <MicrosoftAspNetCoreBlazorHttpClientVersion>5.0.7</MicrosoftAspNetCoreBlazorHttpClientVersion>
-    <MicrosoftAspNetCoreComponentsWebAssemblyServerVersion></MicrosoftAspNetCoreComponentsWebAssemblyServerVersion>
-    <MicrosoftPlaywrightVersion></MicrosoftPlaywrightVersion>
-    <SystemTextJsonVersion>5.0.2</SystemTextJsonVersion>
-    <BlazorExtensionsLoggingVersion>0.4.0</BlazorExtensionsLoggingVersion>
-  </PropertyGroup> -->
