More TestConvention updated
Support InputAttribute.
How to docs
file scoped namespace

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/.editorconfig
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/.editorconfig
@@ -261,3 +261,4 @@ dotnet_diagnostic.CA1062.severity = silent
 
 # CA1308: Normalize strings to uppercase
 dotnet_diagnostic.CA1308.severity = none
+csharp_style_namespace_declarations=block_scoped:suggestion
