--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Directory.Packages.props
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Directory.Packages.props
@@ -5,6 +5,7 @@
     <PackageVersion Include="BlazorComponentUtilities" Version="1.7.1" />
     <PackageVersion Include="Blazor-State" Version="4.0.0" />
     <PackageVersion Include="Dawn.Guard" Version="1.12.0" />
+    <PackageVersion Include="FakeItEasy" Version="7.2.0" />
     <PackageVersion Include="Fixie" Version="3.2.0" />
     <PackageVersion Include="Fixie.TestAdapter" Version="3.2.0" />
     <PackageVersion Include="FluentAssertions" Version="6.1.0" />
