Add in Delegate Source Generator Example
And use it the test project

--- a/.gitignore
+++ b/.gitignore
@@ -334,3 +334,4 @@ ASALocalRun/
 /Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/wwwroot/css/site.css
 /Source/TimeWarp.Blazor.Template/templates/Feature.CrudComponents/.template.config/icon.png
 /Source/TimeWarp.Blazor.Template/templates/Feature.CrudComponents/.template.config/template.json
+/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Documentation/C4/
