--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/TimeWarp.Blazor.Testing/TimeWarp.Blazor.Testing.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/TimeWarp.Blazor.Testing/TimeWarp.Blazor.Testing.csproj
@@ -6,6 +6,16 @@
     <PackageReference Include="FluentAssertions" />
   </ItemGroup>
   <ItemGroup>
+    <!--<ProjectReference Include="..\..\Source\SourceCodeGenerators\SourceCodeGenerators.csproj" />-->
     <ProjectReference Include="..\..\Source\Server\TimeWarp.Blazor.Server.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <!-- Note that this is not a "normal" ProjectReference.
+         It needs the additional 'OutputItemType' and 'ReferenceOutputAssembly' attributes. -->
+    <ProjectReference
+      Include="..\..\Source\SourceCodeGenerators\SourceCodeGenerators.csproj"
+      OutputItemType="Analyzer"
+      ReferenceOutputAssembly="false" />
   </ItemGroup>
 </Project>
