--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/.gitignore
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/.gitignore
@@ -291,3 +291,6 @@ __pycache__/
 /BlazorDefault2018-05-02.Shared/
 /.vscode/
 /source/BlazorState.Js/dist/
+
+# TimeWarp architecture templates Generated Code
+GeneratedCode/
