--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Directory.Packages.props
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Directory.Packages.props
@@ -3,7 +3,7 @@
     <PackageVersion Include="AutoMapper" Version="10.1.1" />
     <PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageVersion Include="BlazorComponentUtilities" Version="1.7.1" />
-    <PackageVersion Include="Blazor-State" Version="4.0.0" />
+    <PackageVersion Include="Blazor-State" Version="4.1.0-beta.4" />
     <PackageVersion Include="Dawn.Guard" Version="1.12.0" />
     <PackageVersion Include="FakeItEasy" Version="7.2.0" />
     <PackageVersion Include="Fixie" Version="3.2.0" />
