--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/TimeWarp.Blazor.Server.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/TimeWarp.Blazor.Server.csproj
@@ -11,7 +11,8 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>UseHttpSys</DefineConstants>
+    <DefineConstants></DefineConstants>
+    <!-- <DefineConstants>UseHttpSys</DefineConstants> -->
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
