--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/DevOps/Docker/docker-compose.yaml
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/DevOps/Docker/docker-compose.yaml
@@ -1,26 +1,26 @@
 version: "3.9"
 
 services:
-    cosmosdb:
-        container_name: cosmosdb
-        image: mcr.microsoft.com/cosmosdb/linux/azure-cosmos-emulator
-        tty: true
-        restart: always
-        ports:
-            - "8081:8081"
-            - "8900:8900"
-            - "8901:8901"
-            - "8979:8979"
-            - "10250:10250"
-            - "10251:10251"
-            - "10252:10252"
-            - "10253:10253"
-            - "10254:10254"
-            - "10255:10255"
-            - "10256:10256"
-            - "10350:10350"
-        volumes:
-            -  vol_cosmos:C:\Data\CosmosDb
+  server:
+    image: 
+
+  cosmosdb:
+      container_name: cosmosdb
+      image: mcr.microsoft.com/cosmosdb/linux/azure-cosmos-emulator
+      tty: true
+      restart: always
+      environment:
+        AZURE_COSMOS_EMULATOR_PARTITION_COUNT: 10
+        AZURE_COSMOS_EMULATOR_ENABLE_DATA_PERSISTENCE: true
+      ports:
+          - "8081:8081"
+          - "8900:8900"
+          - "8901:8901"
+          - "8979:8979"
+          - "10250-10254:10250-10254"
+          - "10350:10350"
+        # volumes:
+        #     -  vol_cosmos:/data/db
         
-volumes:
-    vol_cosmos:     
+# volumes:
+#     vol_cosmos:     
