--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/wwwroot/appsettings.Development.json
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/wwwroot/appsettings.Development.json
@@ -5,5 +5,22 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "service": {
+    "timewarp-blazor-server": {
+      "protocol": "https",
+      "host": "localhost",
+      "port": "5001"
+    },
+    "timewarp-blazor-api": {
+      "protocol": "https",
+      "host": "localhost",
+      "port": "5001"
+    },
+    "timewarp-blazor-grpcserver": {
+      "protocol": "https",
+      "host": "localhost",
+      "port": "5001"
+    }
   }
 }
