--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TimeWarp.Blazor.Client.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TimeWarp.Blazor.Client.csproj
@@ -16,18 +16,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorComponentUtilities" />
+    <PackageReference Include="Blazor-State" />
+    <PackageReference Include="Dawn.Guard" />
     <PackageReference Include="Grpc.Net.Client" />
     <PackageReference Include="Grpc.Net.Client.Web" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" />
-    <PackageReference Include="protobuf-net.Grpc" />
-    <PackageReference Include="System.Net.Http.Json" PrivateAssets="all" />
-
-    <PackageReference Include="BlazorComponentUtilities" />
-    <PackageReference Include="Blazor-State" />
-    <PackageReference Include="Dawn.Guard" />
+    <PackageReference Include="Microsoft.Tye.Extensions.Configuration" />
     <PackageReference Include="PeterLeslieMorris.Blazor.FluentValidation" />
+    <PackageReference Include="protobuf-net.Grpc" />
+    <PackageReference Include="System.Net.Http.Json" PrivateAssets="all" />   
   </ItemGroup>
 
   <ItemGroup>
