--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/wwwroot/appsettings.json
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/wwwroot/appsettings.json
@@ -1,2 +1,26 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
+    }
+  },
+  "service": {
+    "timewarp-blazor-server": {
+      "protocol": "https",
+      "host": "localhost",
+      "port": "5001"
+    },
+    "timewarp-blazor-api": {
+      "protocol": "https",
+      "host": "localhost",
+      "port": "5001"
+    },
+    "timewarp-blazor-grpcserver": {
+      "protocol": "https",
+      "host": "localhost",
+      "port": "5001"
+    }
+  }
 }
