Update to net 6.0
Update nuget packages to latest version
Migrate MediatR related items to support 10.0
Move Superhero stuff to Grpc projects
Move WeatherForecsat stuff to API projects
Update Tye to run it all

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/Client.Integration.Tests/TimeWarp.Blazor.Client.Integration.Tests.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Tests/Client.Integration.Tests/TimeWarp.Blazor.Client.Integration.Tests.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\..\Source\Server\TimeWarp.Blazor.Server.csproj" />
     <ProjectReference Include="..\TimeWarp.Blazor.Testing\TimeWarp.Blazor.Testing.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Configuration\" />
+  </ItemGroup>
 </Project>
