--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TimeWarp.Blazor.Client.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Client/TimeWarp.Blazor.Client.csproj
@@ -18,8 +18,8 @@
   <ItemGroup>
     <PackageReference Include="BlazorComponentUtilities" />
     <PackageReference Include="Blazor-State" />
-    <PackageReference Include="Dawn.Guard" />
     <PackageReference Include="Grpc.Net.Client" />
+    <PackageReference Include="Dawn.Guard" />
     <PackageReference Include="Grpc.Net.Client.Web" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" PrivateAssets="all" />
@@ -27,10 +27,11 @@
     <PackageReference Include="Microsoft.Tye.Extensions.Configuration" />
     <PackageReference Include="PeterLeslieMorris.Blazor.FluentValidation" />
     <PackageReference Include="protobuf-net.Grpc" />
-    <PackageReference Include="System.Net.Http.Json" PrivateAssets="all" />   
+    <PackageReference Include="System.Net.Http.Json" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GrpcShared\TimeWarp.Architecture.Grpc.Contracts.csproj" />    
     <ProjectReference Include="..\Shared\TimeWarp.Blazor.Shared.csproj" />
     <ProjectReference Include="..\TypeScript\TimeWarp.Blazor.TypeScript.csproj" />
   </ItemGroup>
