--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/TimeWarp.Blazor.Server.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/TimeWarp.Blazor.Server.csproj
@@ -51,6 +51,7 @@
 
   <ItemGroup>
     <Folder Include="Entities\X_Aggregate\Requests\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
 </Project>
