Weatherforcast and superhero work server side and client side.
But Increment Count by 7 via Javascript Interop is failing.

--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Api/TimeWarp.Architecture.Api.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Api/TimeWarp.Architecture.Api.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" />
     <PackageReference Include="MediatR" />
+    <PackageReference Include="Microsoft.Extensions.Options" />
   </ItemGroup>
     
 </Project>
