--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/ApiServer/TimeWarp.Architecture.ApiServer.csproj
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/ApiServer/TimeWarp.Architecture.ApiServer.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" />
     <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" />
     <PackageReference Include="Oakton" />
