--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/appsettings.Development.json
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Server/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
@@ -26,7 +27,7 @@
     "timewarp-blazor-grpcserver": {
       "protocol": "https",
       "host": "localhost",
-      "port": "5001"
+      "port": "7227"
     }
   }
 }
